# fft_wgpu

./: Cargo.toml
src/: compute_graph.rs  lib.rs  main.rs  planner.rs  processor.rs  segmented_transfer.rs
src/examples/: basic.rs  basic_inverse.rs  basic_inverse2.rs  basic_multiply.rs  cly_tky.rs  conv.rs  conv2.rs  conv3.rs  graph.rs  transfer.rs  try_copy.rs  try_copy_knl.rs  try_planner.rs
src/kernel/: copy.wgsl  fft.wgsl  fft2.wgsl  fft4.wgsl  fft_stage.wgsl  fftct.wgsl  ifft.wgsl  multiply.wgsl  multiply2.wgsl  normalize.wgsl  onlyifft.wgsl
