[package]
name = "fft_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "*"
bytemuck = { version = "*", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
num-complex = { version = "*", features = ["bytemuck"] }
rustfft = "*"

[[example]]
name = "basic"
path = "src/examples/basic.rs"

[[example]]
name = "basic_inverse"
path = "src/examples/basic_inverse.rs"

[[example]]
name = "basic_inverse2"
path = "src/examples/basic_inverse2.rs"

[[example]]
name = "basic_multiply"
path = "src/examples/basic_multiply.rs"

[[example]]
name = "convolution"
path = "src/examples/conv.rs"

[[example]]
name = "convolution2"
path = "src/examples/conv2.rs"