[package]
name = "fft_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "*"
ndarray = "*"
ndarray-conv = "*"
bytemuck = { version = "*", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
num-complex = { version = "*", features = ["bytemuck"] }
rustfft = "*"
futures-intrusive = "0.5.0"
rand = "0.9.1"
approx = "0.5.1"

[[example]]
name = "basic"
path = "src/examples/basic.rs"

[[example]]
name = "basic_inverse"
path = "src/examples/basic_inverse.rs"

[[example]]
name = "basic_inverse2"
path = "src/examples/basic_inverse2.rs"

[[example]]
name = "basic_multiply"
path = "src/examples/basic_multiply.rs"

[[example]]
name = "convolution"
path = "src/examples/conv.rs"

[[example]]
name = "convolution2"
path = "src/examples/conv2.rs"

[[example]]
name = "graph"
path = "src/examples/graph.rs"

[[example]]
name = "convolution3"
path = "src/examples/conv3.rs"

[[example]]
name = "planner"
path = "src/examples/try_planner.rs"

[[example]]
name = "copy"
path = "src/examples/try_copy.rs"

[[example]]
name = "copy_knl"
path = "src/examples/try_copy_knl.rs"

[[example]]
name = "cly_tky"
path = "src/examples/cly_tky.rs"

